#!/usr/bin/env node

/**
 * Rust Hot Core Initialization
 * 
 * Implements Phase C from TODO.md:
 * - Creates Rust microservice with gRPC boundary  
 * - Sets up tantivy for search indexing
 * - Implements clean architecture with tripwire integration
 * - Establishes benchmarking framework with Criterion.rs
 */

import { execSync } from 'child_process';
import { writeFileSync, mkdirSync, existsSync } from 'fs';
import { join } from 'path';

function runCommand(cmd, options = {}) {
    try {
        console.log(`🔧 Running: ${cmd}`);
        return execSync(cmd, { 
            encoding: 'utf-8', 
            stdio: 'inherit',
            cwd: process.cwd(),
            ...options 
        });
    } catch (error) {
        console.error(`❌ Command failed: ${cmd}`);
        throw error;
    }
}

function initializeRustProject() {
    console.log('🦀 Initializing Rust microservice...');
    
    // Create Rust project structure
    const rustDir = join(process.cwd(), 'rust-core');
    
    if (!existsSync(rustDir)) {
        runCommand('cargo new rust-core --lib');
    }
    
    // Move into Rust directory for subsequent operations
    process.chdir(rustDir);
    
    // Create Cargo.toml with required dependencies
    const cargoToml = `[package]
name = "lens-core"
version = "0.1.0"
edition = "2021"
description = "High-performance search core with anti-fraud attestation"

[dependencies]
# Search engine core
tantivy = "0.21"
fst = "0.4"
roaring = "0.10"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }

# gRPC service
tonic = "0.10"
prost = "0.12"

# Serialization  
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Memory management
memmap2 = "0.7"

# SIMD optimizations
criterion = { version = "0.5", features = ["html_reports"] }

# Build-time info for anti-fraud
built = { version = "0.7", features = ["git2", "chrono"] }

[build-dependencies]
tonic-build = "0.10"
built = { version = "0.7", features = ["git2", "chrono"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
tempfile = "3.8"

[[bench]]
name = "search_benchmarks"
harness = false

[profile.release]
debug = true
lto = true
codegen-units = 1

[profile.bench]
debug = true`;

    writeFileSync('Cargo.toml', cargoToml);
    
    console.log('✅ Cargo.toml configured with fraud-resistant dependencies');
    return rustDir;
}

function createBuildScript() {
    console.log('🔧 Creating build script for anti-fraud attestation...');
    
    const buildScript = `// build.rs - Anti-fraud build information capture
use built;

fn main() {
    // Capture build info for anti-fraud attestation
    built::write_built_file().expect("Failed to acquire build-time information");
    
    // Generate gRPC code
    tonic_build::compile_protos("proto/lens.proto")
        .unwrap_or_else(|e| panic!("Failed to compile protos {:?}", e));
    
    // Ensure we're in 'real' mode, never 'mock'
    println!("cargo:rustc-env=LENS_MODE=real");
    
    // Capture additional build metadata
    println!("cargo:rustc-env=BUILD_TIMESTAMP={}", std::env::var("SOURCE_DATE_EPOCH")
        .unwrap_or_else(|_| chrono::Utc::now().timestamp().to_string()));
}`;

    writeFileSync('build.rs', buildScript);
    
    // Create proto directory and gRPC service definition
    mkdirSync('proto', { recursive: true });
    const protoFile = `syntax = "proto3";

package lens.v1;

// Anti-fraud service with mandatory attestation
service LensSearch {
  // Get build information for anti-fraud verification
  rpc GetBuildInfo(BuildInfoRequest) returns (BuildInfoResponse);
  
  // Perform handshake with nonce/response
  rpc Handshake(HandshakeRequest) returns (HandshakeResponse);
  
  // Execute search with full attestation
  rpc Search(SearchRequest) returns (SearchResponse);
  
  // Health check with mode verification
  rpc Health(HealthRequest) returns (HealthResponse);
}

message BuildInfoRequest {}

message BuildInfoResponse {
  string git_sha = 1;
  bool dirty_flag = 2;
  string build_timestamp = 3;
  string rustc_version = 4;
  string target_triple = 5;
  repeated string feature_flags = 6;
  string mode = 7;  // MUST be "real", never "mock"
}

message HandshakeRequest {
  string nonce = 1;
}

message HandshakeResponse {
  string nonce = 1;
  string response = 2;  // SHA256(nonce || build_sha)
  BuildInfoResponse build_info = 3;
}

message SearchRequest {
  string query = 1;
  uint32 limit = 2;
  string dataset_sha256 = 3;  // Required for provenance
}

message SearchResponse {
  repeated SearchResult results = 1;
  SearchMetrics metrics = 2;
  string attestation = 3;  // Response attestation hash
}

message SearchResult {
  string file_path = 1;
  uint32 line_number = 2;
  string content = 3;
  double score = 4;
}

message SearchMetrics {
  uint64 total_docs = 1;
  uint64 matched_docs = 2;
  uint32 duration_ms = 3;
}

message HealthRequest {}

message HealthResponse {
  string status = 1;
  string mode = 2;    // MUST be "real"
  string version = 3;
}`;

    writeFileSync('proto/lens.proto', protoFile);
    
    console.log('✅ Build script and gRPC definitions created');
}

function createCoreImplementation() {
    console.log('🔍 Creating core search implementation...');
    
    // Create src directory structure
    mkdirSync('src/search', { recursive: true });
    mkdirSync('src/server', { recursive: true });
    mkdirSync('src/attestation', { recursive: true });
    
    // Main library entry point
    const libRs = `//! Lens Core - High-performance search with anti-fraud attestation
//! 
//! This crate implements a fraud-resistant search engine with:
//! - Tantivy-based indexing and search
//! - gRPC API with mandatory attestation
//! - Built-in anti-mock tripwires
//! - Performance benchmarking with Criterion.rs

pub mod search;
pub mod server;
pub mod attestation;

// Build-time information for anti-fraud
pub mod built_info {
    include!(concat!(env!("OUT_DIR"), "/built.rs"));
}

// Generated gRPC code
pub mod proto {
    tonic::include_proto!("lens.v1");
}

use anyhow::Result;

/// Initialize the lens core with anti-fraud checks
pub fn initialize() -> Result<()> {
    // Verify we're in real mode, not mock
    if built_info::CFG_TARGET_OS == "test" {
        tracing::warn!("Running in test mode");
    } else {
        attestation::verify_real_mode()?;
    }
    
    tracing::info!("Lens Core initialized");
    tracing::info!("Git SHA: {}", built_info::GIT_VERSION.unwrap_or("unknown"));
    tracing::info!("Build timestamp: {}", built_info::BUILT_TIME_UTC);
    tracing::info!("Target: {}", built_info::CFG_TARGET_ARCH);
    
    Ok(())
}`;

    writeFileSync('src/lib.rs', libRs);
    
    // Attestation module for anti-fraud
    const attestationRs = `//! Anti-fraud attestation and tripwire system

use anyhow::{Result, bail};
use sha2::{Sha256, Digest};
use crate::built_info;

/// Verify we're running in real mode, not mock
pub fn verify_real_mode() -> Result<()> {
    let mode = std::env::var("LENS_MODE").unwrap_or_else(|_| "real".to_string());
    
    if mode != "real" {
        bail!("TRIPWIRE VIOLATION: LENS_MODE must be 'real', got '{}'", mode);
    }
    
    Ok(())
}

/// Generate build information for handshake
pub fn get_build_info() -> crate::proto::BuildInfoResponse {
    crate::proto::BuildInfoResponse {
        git_sha: built_info::GIT_VERSION.unwrap_or("unknown").to_string(),
        dirty_flag: built_info::GIT_DIRTY.unwrap_or(false),
        build_timestamp: built_info::BUILT_TIME_UTC.to_string(),
        rustc_version: built_info::RUSTC_VERSION.to_string(), 
        target_triple: format!("{}-{}", built_info::CFG_TARGET_ARCH, built_info::CFG_TARGET_OS),
        feature_flags: vec![], // TODO: Add feature detection
        mode: "real".to_string(), // NEVER "mock"
    }
}

/// Perform anti-fraud handshake with nonce/response
pub fn perform_handshake(nonce: &str) -> Result<String> {
    let build_sha = built_info::GIT_VERSION.unwrap_or("unknown");
    let challenge_input = format!("{}{}", nonce, build_sha);
    
    let mut hasher = Sha256::new();
    hasher.update(challenge_input.as_bytes());
    let response = format!("{:x}", hasher.finalize());
    
    Ok(response)
}

/// Check for banned patterns in input
pub fn check_banned_patterns(text: &str) -> Vec<String> {
    let banned = [
        "generateMock", "simulate", "MOCK_RESULT", "mock_file_", "fake"
    ];
    
    let mut violations = Vec::new();
    for pattern in &banned {
        if text.to_lowercase().contains(&pattern.to_lowercase()) {
            violations.push(format!("Banned pattern detected: {}", pattern));
        }
    }
    
    violations
}`;

    writeFileSync('src/attestation.rs', attestationRs);
    
    // Search engine core with tantivy
    const searchRs = `//! High-performance search implementation using Tantivy

use anyhow::Result;
use tantivy::*;
use std::path::Path;
use serde::{Deserialize, Serialize};

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct SearchResult {
    pub file_path: String,
    pub line_number: u32,
    pub content: String,
    pub score: f64,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct SearchMetrics {
    pub total_docs: u64,
    pub matched_docs: u64, 
    pub duration_ms: u32,
}

/// High-performance search engine
pub struct SearchEngine {
    index: Index,
    reader: IndexReader,
    schema: Schema,
    file_path_field: Field,
    content_field: Field,
    line_number_field: Field,
}

impl SearchEngine {
    /// Create new search engine with tantivy backend
    pub fn new<P: AsRef<Path>>(index_path: P) -> Result<Self> {
        // Build schema
        let mut schema_builder = Schema::builder();
        
        let file_path_field = schema_builder.add_text_field("file_path", TEXT | STORED);
        let content_field = schema_builder.add_text_field("content", TEXT | STORED);
        let line_number_field = schema_builder.add_u64_field("line_number", INDEXED | STORED);
        
        let schema = schema_builder.build();
        
        // Create or open index
        let index = if index_path.as_ref().exists() {
            Index::open_in_dir(&index_path)?
        } else {
            std::fs::create_dir_all(&index_path)?;
            Index::create_in_dir(&index_path, schema.clone())?
        };
        
        let reader = index
            .reader_builder()
            .reload_policy(ReloadPolicy::OnCommit)
            .try_into()?;
        
        Ok(SearchEngine {
            index,
            reader,
            schema,
            file_path_field,
            content_field,
            line_number_field,
        })
    }
    
    /// Execute search query with metrics
    pub fn search(&self, query_str: &str, limit: usize) -> Result<(Vec<SearchResult>, SearchMetrics)> {
        let start_time = std::time::Instant::now();
        
        // Parse query
        let query_parser = QueryParser::for_index(&self.index, vec![self.content_field]);
        let query = query_parser.parse_query(query_str)?;
        
        // Execute search
        let searcher = self.reader.searcher();
        let top_docs = searcher.search(&query, &TopDocs::with_limit(limit))?;
        
        let mut results = Vec::new();
        for (_score, doc_address) in top_docs {
            let retrieved_doc = searcher.doc(doc_address)?;
            
            let file_path = retrieved_doc
                .get_first(self.file_path_field)
                .and_then(|f| f.as_text())
                .unwrap_or("unknown")
                .to_string();
                
            let content = retrieved_doc
                .get_first(self.content_field) 
                .and_then(|f| f.as_text())
                .unwrap_or("")
                .to_string();
                
            let line_number = retrieved_doc
                .get_first(self.line_number_field)
                .and_then(|f| f.as_u64())
                .unwrap_or(0) as u32;
                
            results.push(SearchResult {
                file_path,
                line_number,
                content,
                score: _score,
            });
        }
        
        let duration = start_time.elapsed();
        let metrics = SearchMetrics {
            total_docs: searcher.num_docs() as u64,
            matched_docs: results.len() as u64,
            duration_ms: duration.as_millis() as u32,
        };
        
        Ok((results, metrics))
    }
}`;

    writeFileSync('src/search.rs', searchRs);
    
    console.log('✅ Core search implementation created');
}

function createGRPCServer() {
    console.log('🌐 Creating gRPC server with anti-fraud endpoints...');
    
    const serverRs = `//! gRPC server with mandatory anti-fraud attestation

use tonic::{transport::Server, Request, Response, Status};
use crate::proto::lens_search_server::{LensSearch, LensSearchServer};
use crate::proto::*;
use crate::{search::SearchEngine, attestation};
use anyhow::Result;

pub struct LensSearchService {
    search_engine: SearchEngine,
}

impl LensSearchService {
    pub fn new(search_engine: SearchEngine) -> Self {
        Self { search_engine }
    }
}

#[tonic::async_trait]
impl LensSearch for LensSearchService {
    async fn get_build_info(
        &self,
        _request: Request<BuildInfoRequest>,
    ) -> Result<Response<BuildInfoResponse>, Status> {
        let build_info = attestation::get_build_info();
        Ok(Response::new(build_info))
    }
    
    async fn handshake(
        &self,
        request: Request<HandshakeRequest>,
    ) -> Result<Response<HandshakeResponse>, Status> {
        let req = request.into_inner();
        
        if req.nonce.is_empty() {
            return Err(Status::invalid_argument("Nonce is required"));
        }
        
        let response_hash = attestation::perform_handshake(&req.nonce)
            .map_err(|e| Status::internal(format!("Handshake failed: {}", e)))?;
            
        let build_info = attestation::get_build_info();
        
        let response = HandshakeResponse {
            nonce: req.nonce,
            response: response_hash,
            build_info: Some(build_info),
        };
        
        Ok(Response::new(response))
    }
    
    async fn search(
        &self,
        request: Request<SearchRequest>,
    ) -> Result<Response<SearchResponse>, Status> {
        let req = request.into_inner();
        
        // Anti-fraud validation
        let violations = attestation::check_banned_patterns(&req.query);
        if !violations.is_empty() {
            return Err(Status::invalid_argument(format!(
                "Query contains banned patterns: {:?}", violations
            )));
        }
        
        // Require dataset SHA256 for provenance
        if req.dataset_sha256.is_empty() {
            return Err(Status::invalid_argument("Dataset SHA256 is required"));
        }
        
        // Execute search
        let (results, metrics) = self.search_engine
            .search(&req.query, req.limit as usize)
            .map_err(|e| Status::internal(format!("Search failed: {}", e)))?;
            
        // Convert to proto format
        let proto_results: Vec<SearchResult> = results
            .into_iter()
            .map(|r| SearchResult {
                file_path: r.file_path,
                line_number: r.line_number,
                content: r.content,
                score: r.score,
            })
            .collect();
            
        let proto_metrics = SearchMetrics {
            total_docs: metrics.total_docs,
            matched_docs: metrics.matched_docs,
            duration_ms: metrics.duration_ms,
        };
        
        // Generate attestation hash for response
        let attestation = format!("{:x}", 
            sha2::Sha256::digest(format!("{}:{}:{}", 
                req.query, req.dataset_sha256, metrics.duration_ms).as_bytes())
        );
        
        let response = SearchResponse {
            results: proto_results,
            metrics: Some(proto_metrics),
            attestation,
        };
        
        Ok(Response::new(response))
    }
    
    async fn health(
        &self,
        _request: Request<HealthRequest>,
    ) -> Result<Response<HealthResponse>, Status> {
        // Verify real mode
        if let Err(e) = attestation::verify_real_mode() {
            return Err(Status::failed_precondition(format!("Mode check failed: {}", e)));
        }
        
        let response = HealthResponse {
            status: "healthy".to_string(),
            mode: "real".to_string(), // NEVER "mock"
            version: crate::built_info::PKG_VERSION.to_string(),
        };
        
        Ok(Response::new(response))
    }
}

/// Start gRPC server
pub async fn start_server(search_engine: SearchEngine, port: u16) -> Result<()> {
    let addr = format!("0.0.0.0:{}", port).parse()?;
    let service = LensSearchService::new(search_engine);
    
    tracing::info!("Starting Lens gRPC server on {}", addr);
    
    Server::builder()
        .add_service(LensSearchServer::new(service))
        .serve(addr)
        .await?;
        
    Ok(())
}`;

    writeFileSync('src/server.rs', serverRs);
    
    // Create binary entry point
    const mainRs = `//! Lens Core binary entry point

use anyhow::Result;
use tracing_subscriber;
use lens_core::{search::SearchEngine, server::start_server};

#[tokio::main]
async fn main() -> Result<()> {
    // Initialize logging
    tracing_subscriber::init();
    
    // Initialize lens core with anti-fraud checks
    lens_core::initialize()?;
    
    // Create search engine
    let search_engine = SearchEngine::new("./index")?;
    
    // Start gRPC server
    let port = std::env::var("LENS_PORT")
        .unwrap_or_else(|_| "50051".to_string())
        .parse()
        .unwrap_or(50051);
        
    start_server(search_engine, port).await?;
    
    Ok(())
}`;

    writeFileSync('src/main.rs', mainRs);
    
    console.log('✅ gRPC server with anti-fraud attestation created');
}

function createBenchmarks() {
    console.log('📊 Creating Criterion.rs benchmarks...');
    
    mkdirSync('benches', { recursive: true });
    
    const benchmarkRs = `//! High-performance benchmarks for lens core
//! 
//! These benchmarks provide fraud-resistant performance measurement with:
//! - Criterion.rs for statistical rigor
//! - Environment capture for reproducibility  
//! - Anti-mock tripwires

use criterion::{black_box, criterion_group, criterion_main, Criterion};
use lens_core::search::SearchEngine;
use tempfile::TempDir;

fn create_test_engine() -> (SearchEngine, TempDir) {
    let temp_dir = TempDir::new().unwrap();
    let engine = SearchEngine::new(temp_dir.path()).unwrap();
    (engine, temp_dir)
}

fn bench_search_latency(c: &mut Criterion) {
    let (engine, _temp_dir) = create_test_engine();
    
    c.bench_function("search_simple_query", |b| {
        b.iter(|| {
            let results = engine.search(black_box("function"), black_box(10));
            black_box(results)
        })
    });
    
    c.bench_function("search_complex_query", |b| {
        b.iter(|| {
            let results = engine.search(black_box("class AND method"), black_box(100));
            black_box(results)
        })
    });
}

fn bench_concurrent_searches(c: &mut Criterion) {
    let (engine, _temp_dir) = create_test_engine();
    
    c.bench_function("concurrent_search_10", |b| {
        b.iter(|| {
            let handles: Vec<_> = (0..10)
                .map(|i| {
                    let query = format!("query{}", i);
                    engine.search(&query, 10)
                })
                .collect();
            
            black_box(handles)
        })
    });
}

// Environment capture for benchmark attestation
fn bench_with_environment(c: &mut Criterion) {
    // Capture environment info that affects performance
    let cpu_info = std::fs::read_to_string("/proc/cpuinfo")
        .unwrap_or_else(|_| "unknown".to_string());
    let governor = std::fs::read_to_string("/sys/devices/system/cpu/cpu0/cpufreq/scaling_governor")
        .unwrap_or_else(|_| "unknown".to_string());
    
    println!("Benchmark Environment:");
    println!("  CPU Governor: {}", governor.trim());
    println!("  Git SHA: {}", lens_core::built_info::GIT_VERSION.unwrap_or("unknown"));
    println!("  Build Time: {}", lens_core::built_info::BUILT_TIME_UTC);
    
    // Verify we're not in mock mode
    assert_eq!(std::env::var("LENS_MODE").unwrap_or_else(|_| "real".to_string()), "real");
    
    bench_search_latency(c);
    bench_concurrent_searches(c);
}

criterion_group!(benches, bench_with_environment);
criterion_main!(benches);`;

    writeFileSync('benches/search_benchmarks.rs', benchmarkRs);
    
    console.log('✅ Criterion.rs benchmarks with environment attestation created');
}

function createDockerfile() {
    console.log('🐳 Creating Docker configuration for hermetic builds...');
    
    const dockerfile = `# Multi-stage Dockerfile for fraud-resistant builds
FROM rust:1.75-slim as builder

# Install build dependencies
RUN apt-get update && apt-get install -y \\
    pkg-config \\
    libssl-dev \\
    protobuf-compiler \\
    && rm -rf /var/lib/apt/lists/*

WORKDIR /app

# Copy manifests
COPY Cargo.toml Cargo.lock ./
COPY build.rs ./
COPY proto/ ./proto/

# Build dependencies (this is the caching layer)
RUN mkdir src && echo "fn main() {}" > src/main.rs
RUN cargo build --release
RUN rm -f target/release/deps/lens_core*

# Copy source and build
COPY src/ ./src/
COPY benches/ ./benches/

# Build with attestation info
ARG GIT_SHA=unknown
ARG BUILD_TIMESTAMP
ENV GIT_SHA=\${GIT_SHA}
ENV BUILD_TIMESTAMP=\${BUILD_TIMESTAMP}
ENV LENS_MODE=real

RUN cargo build --release

# Runtime image
FROM debian:bookworm-slim

# Install runtime dependencies
RUN apt-get update && apt-get install -y \\
    ca-certificates \\
    && rm -rf /var/lib/apt/lists/*

# Copy binary
COPY --from=builder /app/target/release/lens-core /usr/local/bin/lens-core

# Health check with mode verification
HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \\
    CMD curl -f http://localhost:50051/health || exit 1

EXPOSE 50051

# Ensure real mode
ENV LENS_MODE=real

CMD ["lens-core"]`;

    writeFileSync('Dockerfile', dockerfile);
    
    // Docker compose for development
    const dockerCompose = `version: '3.8'

services:
  lens-core:
    build: 
      context: .
      args:
        GIT_SHA: \${GIT_SHA:-unknown}
        BUILD_TIMESTAMP: \${BUILD_TIMESTAMP:-$(date -Iseconds)}
    ports:
      - "50051:50051"
    environment:
      - LENS_MODE=real
      - RUST_LOG=info
    healthcheck:
      test: ["CMD", "curl", "-f", "http://localhost:50051/health"]
      interval: 30s
      timeout: 10s
      retries: 3
    volumes:
      - ./index:/app/index:rw
      
  # Load testing service  
  load-test:
    image: grafana/k6:latest
    depends_on:
      - lens-core
    volumes:
      - ./k6:/scripts
    command: run --out json=/scripts/results.json /scripts/load-test.js`;

    writeFileSync('docker-compose.yml', dockerCompose);
    
    console.log('✅ Docker configuration with hermetic builds created');
}

function initializeRustCore() {
    console.log('🚀 INITIALIZING RUST HOT CORE');
    console.log('==============================');
    
    const artifacts = {
        rust_project: initializeRustProject(),
    };
    
    // Return to original directory
    process.chdir('..');
    
    createBuildScript();
    createCoreImplementation();
    createGRPCServer();
    createBenchmarks();
    createDockerfile();
    
    // Create README for Rust core
    const readmePath = join(artifacts.rust_project, 'README.md');
    const readme = `# Lens Core - Rust Implementation

High-performance search microservice with anti-fraud attestation.

## Features

- **Tantivy Search Engine**: Full-text search with BM25 ranking
- **gRPC API**: High-performance RPC interface
- **Anti-Fraud Tripwires**: Built-in mock detection and attestation
- **Performance Benchmarks**: Criterion.rs with environment capture
- **Hermetic Builds**: Docker multi-stage builds with attestation

## Building

\`\`\`bash
# Development build
cargo build

# Optimized release build
cargo build --release

# Run benchmarks
cargo bench

# Docker build with attestation
docker build --build-arg GIT_SHA=$(git rev-parse HEAD) .
\`\`\`

## Anti-Fraud Features

- **Handshake Protocol**: Mandatory nonce/response verification
- **Mode Verification**: Must be 'real', never 'mock'
- **Pattern Detection**: Automatic banned pattern scanning
- **Build Attestation**: Git SHA and timestamp embedded at compile time

## API Endpoints

- \`GetBuildInfo()\` - Returns build information for verification
- \`Handshake(nonce)\` - Performs anti-fraud challenge/response
- \`Search(query, dataset_sha256)\` - Execute search with provenance
- \`Health()\` - Health check with mode verification

## Performance

Designed for:
- **Latency**: <10ms p95 for typical queries
- **Throughput**: >1000 QPS sustained
- **Memory**: <100MB RSS for 1M document corpus
- **Concurrency**: Lock-free search with tokio async

## Security

All benchmarks require:
- Dataset SHA256 for provenance
- Service handshake with nonce/response
- Environment capture (CPU, kernel, governor)
- Build attestation chain from source to binary

Never runs in 'mock' mode - tripwires prevent synthetic data injection.`;

    writeFileSync(readmePath, readme);
    
    console.log('\n✅ RUST HOT CORE INITIALIZED');
    console.log('=============================');
    console.log(`📁 Project: ${artifacts.rust_project}`);
    console.log('🦀 Components:');
    console.log('  - Tantivy search engine with fraud detection');
    console.log('  - gRPC server with mandatory attestation');  
    console.log('  - Criterion.rs benchmarks with environment capture');
    console.log('  - Docker builds with hermetic attestation');
    console.log('  - Anti-fraud tripwires throughout');
    
    console.log('\n🔧 Next Steps:');
    console.log('  1. cd rust-core && cargo build');
    console.log('  2. cargo test');
    console.log('  3. cargo bench');
    console.log('  4. docker-compose up (for integration testing)');
    
    console.log('\n🛡️  Security: All components include anti-fraud tripwires');
    console.log('🚨 Mode verification: Service MUST run in "real" mode only');
    
    return artifacts;
}

initializeRustCore();